--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -16,18 +16,9 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Cache pip dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache/pip
-        key: pip-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('requirements.txt') }}
-        restore-keys: |
-          pip-${{ runner.os }}-${{ matrix.python-version }}-
-
-    - name: Install dependencies
+    - name: Install pylint
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
         pip install pylint
 
     - name: Analysing the code with pylint
